--- a/LazyMorning.css
+++ b/LazyMorning.css
@@ -20,7 +20,7 @@ body{
 }
 
 header{
-    background-image: url("images/pancake.png");
+    background-image: url("images/pancake.jpg");
     height: 120px;
     margin:0px;
     border:3px double #000000;
